Fix feature search list overflow in Firefox

--- a/css/80_app.css
+++ b/css/80_app.css
@@ -1508,6 +1508,7 @@ a.hide-toggle {
 
 .feature-list-pane {
     width: 100%;
+    min-height: 0;
     display: flex;
     flex-direction: column;
 }
